lazy loading for img tags added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 <body>
     <div class="wrapper">
         <div class="loader">
-            <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+            <div class="lds-ring">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
         <div class="safe-container">
             <header class="header container header-container">
@@ -119,24 +124,27 @@
                 <div class="portfolio-content">
                     <div class="portfolio-left-column">
                         <div class="portfolio-plate mojem-plate">
-                            <img src="./assets/images/mojem.webp" alt="Можем" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/mojem.webp" alt="Можем" class="adaptive-plate-img">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Можем
                             </div>
                         </div>
                         <div class="portfolio-plate sens-visual-plate">
-                            <img src="./assets/images/sens-visual.webp" alt="Сенс візуал" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/sens-visual.webp" alt="Сенс візуал"
+                                class="adaptive-plate-img">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Сенс
                                 візуал</div>
                         </div>
                         <div class="portfolio-plate bohlib-plate">
-                            <img src="./assets/images/bohlib.webp" alt="Бохліб" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/bohlib.webp" alt="Бохліб"
+                                class="adaptive-plate-img">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Бохліб
                             </div>
                         </div>
                         <div class="portfolio-plate bigmoney-plate">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">
                                 Бігмані</div>
-                            <img src="./assets/images/bigmoney.webp" alt="Бігмані" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/bigmoney.webp" alt="Бігмані"
+                                class="adaptive-plate-img">
                         </div>
                     </div>
                     <div class="portfolio-right-column">
@@ -145,19 +153,22 @@
                             <div class="lower-portfolio-title">наприклад</div>
                         </div>
                         <div class="portfolio-plate gnrtr-plate">
-                            <img src="./assets/images/gnrtr.webp" alt="Генератор" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/gnrtr.webp" alt="Генератор"
+                                class="adaptive-plate-img">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">
                                 Генератор</div>
                         </div>
                         <div class="portfolio-plate bold-plate">
-                            <img src="./assets/images/bold.webp" alt="Болд маркетинг" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/bold.webp" alt="Болд маркетинг"
+                                class="adaptive-plate-img">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">Болд
                                 маркетинг</div>
                         </div>
                         <div class="portfolio-plate profi-plate">
                             <div class="plate-tag" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="500">
                                 Профі-центр</div>
-                            <img src="./assets/images/profi.webp" alt="Профі-центр" class="adaptive-plate-img">
+                            <img loading="lazy" src="./assets/images/profi.webp" alt="Профі-центр"
+                                class="adaptive-plate-img">
                         </div>
                     </div>
                 </div>
@@ -190,58 +201,58 @@
                 </div>
                 <div class="team-members">
                     <div class="team-left-grid">
-                        <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.webp" class="team-l-img"
+                        <div class="photo-area1 sm-photo"><img loading="lazy" src="./assets/images/marketer1.webp" class="team-l-img"
                                 alt="Marketer">
-                            <img src="./assets/images/marketer1-mobile.webp" class="team-s-img" alt="Marketer">
+                            <img loading="lazy" src="./assets/images/marketer1-mobile.webp" class="team-s-img" alt="Marketer">
                             <div class="member-tag">Marketer</div>
                         </div>
-                        <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.webp" class="team-l-img"
+                        <div class="photo-area2 sm-photo"><img loading="lazy" src="./assets/images/marketer2.webp" class="team-l-img"
                                 alt="Marketer">
-                            <img src="./assets/images/marketer2-mobile.webp" class="team-s-img" alt="Marketer">
+                            <img loading="lazy" src="./assets/images/marketer2-mobile.webp" class="team-s-img" alt="Marketer">
                             <div class="member-tag">Marketer</div>
                         </div>
-                        <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.webp"
+                        <div class="single-photo-area l-photo"><img loading="lazy"  src="./assets/images/project-manager.webp"
                                 class="team-l-img" alt="Project manager">
-                            <img src="./assets/images/project-manager-mobile.webp" class="team-s-img"
+                            <img loading="lazy" src="./assets/images/project-manager-mobile.webp" class="team-s-img"
                                 alt="Project manager">
                             <div class="member-tag">Project manager</div>
                         </div>
-                        <div class="single-photo-area2 l-photo"><img src="./assets/images/team-img.png"
+                        <div class="single-photo-area2 l-photo"><img loading="lazy" src="./assets/images/team-img.png"
                                 class="team-l-img" alt="Team">
                         </div>
                     </div>
                     <div class="team-right-grid">
-                        <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.webp"
+                        <div class="single-photo-area3 l-photo"><img loading="lazy" src="./assets/images/designer1.webp"
                                 class="team-l-img" alt="UI/UX designer">
-                            <img src="./assets/images/designer1-mobile.png" class="team-s-img" alt=">UI/UX designer">
+                            <img loading="lazy" src="./assets/images/designer1-mobile.png" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img
+                        <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img loading="lazy"
                                 src="./assets/images/team-img.png" class="team-l-img" alt=">UI/UX designer">
                         </div>
-                        <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.webp" class="team-l-img"
+                        <div class="photo-area3 sm-photo"><img loading="lazy" src="./assets/images/designer2.webp" class="team-l-img"
                                 alt="UI/UX designer">
-                            <img src="./assets/images/designer3-mobile.webp" class="team-s-img" alt=">UI/UX designer">
+                            <img loading="lazy" src="./assets/images/designer3-mobile.webp" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.webp" class="team-l-img"
+                        <div class="photo-area4 sm-photo"><img loading="lazy" src="./assets/images/designer3.webp" class="team-l-img"
                                 alt="UI/UX designer">
-                            <img src="./assets/images/designer2-mobile.webp" class="team-s-img" alt=">UI/UX designer">
+                            <img loading="lazy" src="./assets/images/designer2-mobile.webp" class="team-s-img" alt=">UI/UX designer">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.webp" class="team-l-img"
+                        <div class="photo-area5 sm-photo"><img loading="lazy" src="./assets/images/ppc.webp" class="team-l-img"
                                 alt="PPC-Specialist">
-                            <img src="./assets/images/ppc-mobile.webp" class="team-s-img" alt="PPC-Specialist">
+                            <img loading="lazy" src="./assets/images/ppc-mobile.webp" class="team-s-img" alt="PPC-Specialist">
                             <div class="member-tag">PPC-Specialist</div>
                         </div>
-                        <div class="photo-area6 sm-photo"><img src="./assets/images/front-end.png"
+                        <div class="photo-area6 sm-photo"><img loading="lazy" src="./assets/images/front-end.png"
                                 alt="Front-end Specialist">
                             <div class="member-tag">Front-end Specialist</div>
                         </div>
                         <div class="photo-area7 sm-photo"></div>
-                        <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.webp" class="team-l-img"
+                        <div class="photo-area8 sm-photo"><img loading="lazy" src="./assets/images/ideolog.webp" class="team-l-img"
                                 alt="Ідеолог проєкту">
-                            <img src="./assets/images/ideolog-mobile.webp" class="team-s-img" alt="Ідеолог проєкту">
+                            <img loading="lazy" src="./assets/images/ideolog-mobile.webp" class="team-s-img" alt="Ідеолог проєкту">
                             <div class="member-tag">Ідеолог проєкту</div>
                         </div>
                     </div>
